--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,12 +11,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #161515;
 }
 
 * {
   box-sizing: border-box;
 }
-
 
 /* Start purging... */
 @tailwind utilities;
