--- a/src/components/backgroundEffect/BackgroundEffect.module.css
+++ b/src/components/backgroundEffect/BackgroundEffect.module.css
@@ -1,5 +1,20 @@
 .scene {
   position: absolute !important;
+  left: 0;
   height: 100vh !important;
-  /* z-index: -1 !important;   */
+  z-index: 0 !important;
+  opacity: 0;
+  animation: fade-in 2s ease-in forwards;
+  overflow: hidden;
+  filter: brightness(0.9);
+  background: #111111;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
